// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsPoplist renders correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.emotion-2 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-2.emotion-2 {
  margin-right: 0;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.emotion-4.emotion-4 {
  box-shadow: 0 -1px 5px 3px rgba(165,165,205,0.15);
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-5 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-5.emotion-5 {
  margin: 4px;
}

.emotion-6 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
  <div
    className="sui-box emotion-0"
  >
    <div
      className="sui-box emotion-1"
    >
      <div
        className="sui-box emotion-2"
      >
        <span
          className="emotion-3"
        >
          scaleway
        </span>
      </div>
    </div>
    +
    1
    <div
      className="sui-box emotion-4"
    >
      <div
        className="sui-box emotion-5"
      >
        <span
          className="emotion-6"
        >
          cloud
        </span>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`TagsPoplist renders correctly with custom threshold 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.emotion-2 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-2.emotion-2 {
  margin-right: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.emotion-4 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4.emotion-4 {
  margin-right: 0;
}

<div>
  <div
    className="sui-box emotion-0"
  >
    <div
      className="sui-box emotion-1"
    >
      <div
        className="sui-box emotion-2"
      >
        <span
          className="emotion-3"
        >
          scaleway
        </span>
      </div>
      <div
        className="sui-box emotion-4"
      >
        <span
          className="emotion-3"
        >
          cloud
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.emotion-2 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-2.emotion-2 {
  margin-right: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.emotion-4 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4.emotion-4 {
  margin-right: 0;
}

.emotion-6.emotion-6 {
  box-shadow: 0 -1px 5px 3px rgba(165,165,205,0.15);
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-7 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-7.emotion-7 {
  margin: 4px;
}

.emotion-8 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
  <div
    className="sui-box emotion-0"
  >
    <div
      className="sui-box emotion-1"
    >
      <div
        className="sui-box emotion-2"
      >
        <span
          className="emotion-3"
        >
          scaleway
        </span>
      </div>
      <div
        className="sui-box emotion-4"
      >
        <span
          className="emotion-3"
        >
          cloud
        </span>
      </div>
    </div>
    +
    1
    <div
      className="sui-box emotion-6"
    >
      <div
        className="sui-box emotion-7"
      >
        <span
          className="emotion-8"
        >
          provider
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.emotion-2 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-2.emotion-2 {
  margin-right: 0;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.emotion-4.emotion-4 {
  box-shadow: 0 -1px 5px 3px rgba(165,165,205,0.15);
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-5 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-5.emotion-5 {
  margin: 4px;
}

.emotion-6 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
  <div
    className="sui-box emotion-0"
  >
    <div
      className="sui-box emotion-1"
    >
      <div
        className="sui-box emotion-2"
      >
        <span
          className="emotion-3"
        >
          scaleway
        </span>
      </div>
    </div>
    +
    2
    <div
      className="sui-box emotion-4"
    >
      <div
        className="sui-box emotion-5"
      >
        <span
          className="emotion-6"
        >
          cloud
        </span>
      </div>
      <div
        className="sui-box emotion-5"
      >
        <span
          className="emotion-6"
        >
          provider
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TagsPoplist renders correctly with not tags 1`] = `<div />`;
